--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,49 +1,9 @@
 ---
-# tasks file for lighthouse-role
-  - name: Install dependencies
-    apt:
-      package={{ item }}
-      state=present
-      update_cache=yes
-    with_items:
-      - nginx-full
-      - git
-    tags: lighthouse
-  - name: Remove default nginx virtualhost
-    file:
-      path: "{{ item }}"
-      state: absent
-    with_items:
-      - /etc/nginx/sites-enabled/default
-      - /etc/nginx/sites-available/default
-      - /etc/nginx/snippets/snakeoil.conf
-    tags: lighthouse
-  - name: Upload Lighthouse virtualhost configs
-    copy:
-      src: files/lighthouse.conf
-      dest: /etc/nginx/sites-available/lighthouse.conf
-      mode: 0664
-    tags: lighthouse
-  - name: Turn on Lighthouse virtualhost
-    file:
-      src: /etc/nginx/sites-available/lighthouse.conf
-      dest: /etc/nginx/sites-enabled/lighthouse.conf
-      state: link
-    tags: lighthouse
-  - name: "Create root directory for Lighthouse"
-    file:
-      path: "/home/web/lighthouse"
-      mode: 0755
-      state: directory
-    tags: lighthouse
-  - name: "Clone Lighthouse from the repository"
-    git:
-      repo: https://github.com/VKCOM/lighthouse.git
-      dest: /home/web/lighthouse
-      version: master
-    tags: lighthouse
-  - name: Nginx restart
-    service:
-      name: nginx
-      state: restarted
-    tags: lighthouse
+
+- name: "Clone Lighthouse from the repository"
+  git:
+    repo: https://github.com/VKCOM/lighthouse.git
+    dest: "{{ lighthouse_home }}"
+    version: master
+  tags: lighthouse
+  
